feat(user): add semester information to subject responses and enhance student profiles
- Include semesterId and semesterName in teacher subject responses by querying grades
- Add comprehensive subject information to student profile responses
- Extract semester data from existing grade records for better context
- Enhance student listing with subjects they are enrolled in
- Improve data richness for both teacher and student profile endpoints
- Replace .toList() with .collect(Collectors.toList()) for better compatibility